--- a/InitPhoton.ipynb
+++ b/InitPhoton.ipynb
@@ -24,11 +24,14 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "importing Jupyter notebook from NoiseMods.ipynb\n",
-      "importing Jupyter notebook from Instructions.ipynb\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'NoiseMods'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-7eec1c33095f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mimport_ipynb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mNoiseMods\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mNoiseMods\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mEmissionNoiseModel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mCollectiveDephasingNoiseModel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mInstructions\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mIonTrapMultiQubitRotation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mIonTrapMSGate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'NoiseMods'"
      ]
     }
    ],
@@ -41,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,6 +152,13 @@
     "                         num_positions=num_positions + 1,\n",
     "                         mem_noise_models=CollectiveDephasingNoiseModel(\n",
     "                             coherence_time=self.properties[\"coherence_time\"]))\n",
+    "        \n",
+    "        \n",
+    "        \"\"\"\n",
+    "        super().__init__(num_positions=num_positions+1, \n",
+    "                         mem_noise_models=DephaseNoiseModel(coherence_time=self.properties[\"coherence_time\"])\n",
+    "        \n",
+    "        \"\"\"\n",
     "        \n",
     "        self.resample()\n",
     "        self.models[\"qout_noise_model\"] = EmissionNoiseModel(\n",
@@ -267,20 +277,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\n# test IonTrap methods\\ntester = IonTrap(2)\\nprint(tester)\\ntester._set_physical_instructions()\\ntester.resample()\\ntester.reset()\\n\\n'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "# test IonTrap methods\n",
